--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   pinput: ^1.2.0
   flutter_switch: ^0.3.1
   google_maps_flutter: ^2.0.6
+  provider: ^5.0.0
 
 
 dev_dependencies:
