--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,7 @@ flutter:
     - assets/jsonlar/
     - assets/bottommenu/
     - assets/alertpopup/
+    - assets/iptalscreen/
    
 
   # An image asset can refer to one or more resolution-specific "variants", see
