kacirilan firsat sayfası yarısı

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   syncfusion_flutter_maps: ^19.1.69-beta
   youtube_player_flutter: ^8.0.0
   carousel_slider: ^4.0.0
+  percent_indicator: ^3.0.1
 
 
 dev_dependencies:
